# VEnvIt

./: .gitignore  .pre-commit-config.yaml  CodeCoverage.xml  EnvVarClear.ps1  EnvVarReset.ps1  LICENSE.txt  Manifest.psd1  README copy.md  README.md  ReleaseNotes.md  download.ps1  env_var_dev.ps1  envvar_clear.ps1  envvar_reset.ps1  install.ps1  installpythontools.ps1  manifest.psd1  pyproject.toml  readme.1.old  resetenvhdt.ps1  testResults.xml  vn.ps1  vr.ps1
.github/ISSUE_TEMPLATE/: bugfix.md  custom-issue-template-xxx.md  enhancement.md  hotfix.md  release.md
.github/workflows/: 00-deployment-pipeline.yaml  00-deployment-pipeline.yml  01-pre-commit-and-document-check.yaml  01-pre-commit-and-document-check.yml  01-pre-commit.yml  02-check-documentation.yml  03-ci.yaml  03-ci.yml  04-build-and-deploy-to-production.yaml  04-build-and-deploy-to-production.yml  04-build-and-deploy-to-production.yml.01  all-temp-fork-pub_scheduled_sync_with_upstream-weekly.yaml  py-temp-fork-pvt_merge_no_docker-def.yaml
src/: Conclude-Install.ps1  Conclude-Install.psm1  Conclude-UpgradePrep.ps1  Conclude-UpgradePrep.psm1  Install-Conclude.psm1  InstallClient.ps1  Uninstall.ps1  Update-Manifest.ps1  Update-Manifest.psm1  Utils.psm1  complete_install.ps1  download.ps1  env_var_dev.csv  install.ps1  secrets.ps1  vi.ps1  vn.ps1  vr.ps1
tests/: Conclude-Install.Tests.ps1  Conclude-UpgradePrep.Tests.ps1  Install-Conclude.Tests.ps1  Install.Tests.ps1  Prepare.ps1  Publish-TestResources.Tests.ps1  Publish-TestResources.psm1  Results.ps1  Uninstall.Tests.ps1  Update-Manifest.Tests.ps1  Upgrade.Tests.ps1  Utils.Tests.ps1  resetenvhdt.ps1  vi.Tests.ps1  vn.Tests.ps1  vr.Tests.ps1
tst/: Prepare.Tests.ps1  Results.Tests.ps1  RunTests.Tests.ps1  install.ps1
~/VEnvIt Backup/: EnvironmentVariables_202411131744.txt  EnvironmentVariables_202411131746.txt
