[build-system]
requires = [
    "build",
    "pytest-runner",
    "setuptools >= 68",
    "toml",
    "setuptools-git >= 1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = 'venvit'
version = '5.3.56'
authors = [
    { name = 'Hendrik du Toit', email = 'hendrik@brightedge.co.za' },
    { name = 'Henru du Toit', email = 'henru@brightedge.co.za' },
    { name = 'Dirk du Toit', email = 'dirk@brightedge.co.za' },
]
description = 'Tools for creating Python virtual environments.'
license = { file = 'LICENSE' }
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Software Development :: Version Control',
    'Topic :: Software Development :: Version Control :: Git',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
]
readme = { file = 'README.md', content-type = 'text/md' }
requires-python = '<3.13'
dependencies = [
    'pre-commit',
    'mdformat-gfm',
    'mdformat-frontmatter',
    'mdformat-footnote',
    'rstcheck',
]

[project.optional-dependencies]
dev = []

[project.urls]
Changelog = 'https://github.com/BrightEdgeeServices/venvit/blob/enhancement/master/ReleaseNotes.md'
Homepage = 'https://github.com/BrightEdgeeServices/venvit'

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'
ignore-words-list = 'space-holder'

[tool.setuptools.dynamic]
readme = { file = ["README.md", "UPGRADE.md"] }
