[build-system]
    requires = [
        "poetry-core>=1.0.0",
    ]
    build-backend = "poetry.core.masonry.api"

[tool.black]
    line-length = 120
    target-version = [
        "py312",
    ]

[tool.codespell]
    count = ''
    quiet-level = 2
    skip = 'documentation/Archive/*'
    ignore-words-list = 'AfterAll'

[tool.coverage.run]
    source = [
        'src',
        'tests',
    ]

[tool.isort]
    profile = "black"

[tool.poetry]
    name = 'venvit'
    version = '7.0.0'
    description = 'Tools for creating, maintaining and automating Python virtual environments.'
    authors = [
        "Hendrik du Toit <hendrik@brightedge.co.za>",
    ]
    license = "file:LICENSE"
    readme = "README.md"
    classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'Topic :: Software Development',
        'Topic :: Software Development :: Version Control',
        'Topic :: Software Development :: Version Control :: Git',
        'Topic :: Utilities',
        'Programming Language :: Python :: 3.12',
        'License :: OSI Approved :: MIT License',
    ]
    # documentation = "https://readthedocs.org"
    homepage = 'https://github.com/BrightEdgeeServices/venvit'
    repository = "https://github.com/RealTimeEvents/rtecommon.git"

[tool.poetry.dependencies]
    python = "^3.12.2"
    pydantic-settings = "^2.4.0"
    mysql-connector-python = "^9.0.0"
    pydantic = "^2.8.2"
    sqlalchemy = "==1.4.52"

[tool.poetry.group.dev.dependencies]
    mdformat-gfm = "^0.3.6"
    mdformat-frontmatter = "^2.0.8"
    mdformat-footnote = "^0.1.1"
    rstcheck = "^6.2.4"
    black = "^24.8.0"
    flake8 = "^7.1.1"
    pre-commit = "^3.8.0"

[tool.poetry.metadata]
    maintainers = [
        "Hendrik du Toit <hendrik@brightedge.co.za>",
        "Henru du Toit <henru@brightedge.co.za>",
        "Dirk du Toit <dirk@brightedge.co.za>",
    ]

[tool.poetry.urls]
    issues = "https://github.com/BrightEdgeeServices/venvit/issues"
    changelog = 'https://github.com/BrightEdgeeServices/venvit/blob/enhancement/master/ReleaseNotes.md'

[tool.pytest.ini_options]
    addopts = [
        '-vv',
        '--ignore-glob=*\\Archive',
    ]
    #addopts = ['--import-mode=importlib', "-v", "--cov=./", "--ignore-glob=*\\Archive", "--cov-report=html"]
    markers = [
        "config: Run config tests",
        "dbdef: Run dbdef tests ",
        "select: Run a selection of tests",
    ]
    filterwarnings = [
        "ignore::DeprecationWarning",
    ]
    pythonpath = [
        'src',
        'src/rtedb',
        'tests',
    ]
    testpaths = 'tests'
