[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = 'venvit'
version = '7.1.0'
description = 'Tools for creating, maintaining and automating Python virtual environments.'
authors = [
    { name = "Hendrik du Toit", email = "hendrik@brightedge.co.za" }
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Software Development :: Version Control',
    'Topic :: Software Development :: Version Control :: Git',
    'Topic :: Utilities',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
]
license = "MIT"
#license = "Proprietary"
license-files = ["LICENSE.txt"]
maintainers = [
    { name = "Hendrik du Toit", email = "hendrikdt@citiqprepaid.co.za" },
    { name = 'Henru du Toit', email = 'henru@brightedge.co.za' },
    { name = 'Dirk du Toit', email = 'dirk@brightedge.co.za' },
]
readme = { file = 'README.md', content-type = 'text/markdown' }
#readme = "README.md"
requires-python = ">=3.10"

[project.urls]
# documentation = "https://readthedocs.org"
Issues = "https://github.com/BrightEdgeeServices/venvit/issues"
Changelog = 'https://github.com/BrightEdgeeServices/venvit/blob/enhancement/master/ReleaseNotes.md'
Homepage = 'https://github.com/BrightEdgeeServices/venvit'
Repository = "https://github.com/RealTimeEvents/rtecommon.git"
[tool.black]
line-length = 120
target-version = [
    "py310",
]

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'
ignore-words-list = 'AfterAll'

[tool.coverage.run]
source = [
    'src',
    'tests',
]

[tool.isort]
profile = "black"


[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
codecov = ">=2.1.13"
mdformat-gfm = ">=0.4.1"
mdformat-frontmatter = ">=2.0.8"
mdformat-footnote = ">=0.1.1"
pre-commit = ">=4.0.1"
rstcheck = { extras = [
    "sphinx",
], version = ">=6.2.4" }
sphinx = ">=8.1.3"
twine = ">=6.1.0"


[tool.pytest.ini_options]
addopts = [
    '-vv',
    '--ignore-glob=*\\Archive',
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = [
    'src',
    'tests',
]
testpaths = 'tests'
markers = [
    "select: Run a selection of tests",
]
